2005-01-31  Michael Schlenker <mic42@users.sourceforge.net>
	* logger.test : Added tests for bug [1102131]. 
	  The logger servicename can not be detected correctly.
	  No good fix yet.

2005-01-12  Michael Schlenker <mic42@users.sourceforge.net>

	* logger.tcl : Fixed bug [1099722]. New children did      
	  logger.test: not inherit their parents loglevel if
	  it was set prior to their creation. Added a new test 5.2
	  for this case. Raised package version to 0.5.1.
	  
2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-10-04  Michael Schlenker <mic42@users.sourceforge.net>

	* logger.tcl : Added more tests for logger::import,
	  logger.test: minor fixes to error messages.
	  
2004-09-23  Andreas Kupries  <andreask@activestate.com>

	* logger.tcl (logger::import): Fixed malformed return value,
	  premature end of the string due to unquoted ".

	* logger.tcl: A small fix in the new command [nsExists] for Tcl
	  8.[23]. The condition was revers.

2004-09-23  Michael Schlenker <mic42@users.sourceforge.net>

	* logger.tcl : Added a workaround for non-existing
	  namespace exists in logger::import, so we can
	  stay at Tcl 8.2.
	
2004-09-13  Michael Schlenker <mic42@users.sourceforge.net>

	* logger.tcl : Changed defaults for logger::import,
          logger.man : added a -force option and some more tests
          logger.test:

2004-09-13  Michael Schlenker <mic42@users.sourceforge.net>

	* logger.tcl : Implemented and doc'ed new global logger::setlevel
          logger.man : 

2004-09-06  Michael Schlenker <mic42@users.sourceforge.net>

	* logger.tcl : Implemented and doc'ed new logger::import feature.
          logger.man : Needs more tests.
          logger.test:
          
2004-09-06  Michael Schlenker <mic42@users.sourceforge.net>

	* logger.tcl: Removed hardcoded level names in logger::init.

2004-06-18  Andreas Kupries  <andreask@activestate.com>
