@@ -7,7 +7,7 @@
 # Copyright (c) 2002 by David N. Welton <davidw@dedasys.com>.
 # Copyright (c) 2004,2005 by Michael Schlenker <mic42@users.sourceforge.net>.
 #
-# $Id: logger.test,v 1.17 2005/01/31 16:55:50 mic42 Exp $
+# $Id: logger.test,v 1.18 2005/01/31 17:58:04 mic42 Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -749,7 +749,7 @@ test logger-13.2 {test for correct servicename, Bug 1102131} {
          lappend ::INFO $service $txt
     }    
     namespace eval ::foo {
-        logger::import -all -namespace log global::child::child
+        logger::import -force -all -namespace log global::child::child
     }
 
     ${l1}::info global
@@ -770,7 +770,7 @@ test logger-13.3 {test for correct servicename, Bug 1102131} {
          lappend ::INFO $service $txt
     }    
     namespace eval ::foo {
-        logger::import -namespace log global::child::child
+        logger::import -force -namespace log global::child::child
     }
 
     ${l1}::info global
@@ -791,7 +791,7 @@ test logger-13.4 {test for correct servicename, Bug 1102131} {
          lappend ::INFO $service $txt
     }    
     namespace eval ::foo {
-        logger::import -all -prefix log_ -namespace log global::child::child
+        logger::import -force -all -prefix log_ -namespace log global::child::child
     }
 
     ${l1}::info global
@@ -812,7 +812,7 @@ test logger-13.5 {test for correct servicename, Bug 1102131} {
          lappend ::INFO $service $txt
     }    
     namespace eval ::foo {
-        logger::import -prefix log_ -namespace log global::child::child
+        logger::import -force -prefix log_ -namespace log global::child::child
     }
 
     ${l1}::info global
@@ -833,7 +833,7 @@ test logger-13.6 {test for correct servicename, Bug 1102131} {
          lappend ::INFO $service $txt
     }    
     namespace eval ::foo {
-        logger::import -prefix log_ global::child::child
+        logger::import -force -prefix log_ global::child::child
     }
 
     ${l1}::info global
@@ -854,7 +854,7 @@ test logger-13.7 {test for correct servicename, Bug 1102131} {
          lappend ::INFO $service $txt
     }    
     namespace eval ::foo {
-        logger::import -all -prefix log_ global::child::child
+        logger::import -force -all -prefix log_ global::child::child
     }
 
     ${l1}::info global
